Show confirmation for deleted screenshot.
Change-Id: I4a36cf06bf252e5e15fe08fbd054dc64a0a507ae

--- a/packages/SystemUI/res/values/baked_strings.xml
+++ b/packages/SystemUI/res/values/baked_strings.xml
@@ -112,6 +112,7 @@
 
     <!-- Screenshot delete -->
     <string name="screenshot_delete_action">Delete</string>
+    <string name="screenshot_delete_confirmation">Screenshot deleted.</string>
 
     <!-- Create shortcut -->
     <string name="shortcut_label">SystemUi actions</string>
