Port forward QuickSettings customization from jb-4.2 (1/2)
  * Forward tiles per row from jb-4.2 made to work with kk-4.4 keeping
    landscape and portrait separate.
  * Forward text size based on tiles per row
  * Forward custom tiles background color fill, random or stock
  * Forward animate tile on press customized for 4.4 now just the tile
    pressed animates based on on/off status. This is only implement for
    tiles that have on/off state. Tiles with no state were given only
    the on state. Tiles that collapse expanded statusbar were left alone
    as there is no point in animating them.

ps 1: user tile broken so that got fixed

ps 2: correct location tile so it functions like it should location
      on/off being recognized.

ps 3: fix the lte tile.
      // still didn't find a way to toggle of global mode tho.

Signed-off-by: baked <travp624@gmail.com>

--- a/core/res/res/values/baked_symbols.xml
+++ b/core/res/res/values/baked_symbols.xml
@@ -36,4 +36,7 @@
     <java-symbol type="id" name="current_value" />
     <java-symbol type="id" name="max_value" />
     <java-symbol type="id" name="textsize_seekbar" />
+
+    <!-- QuickSettings -->
+    <java-symbol type="integer" name="config_quickSettingsColumns" />
 </resources>
