--- a/packages/SystemUI/res/layout/quick_settings_tile_basic.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_basic.xml
@@ -17,7 +17,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="top"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/image"
@@ -25,7 +26,8 @@
         android:layout_marginBottom="@dimen/qs_tile_margin_below_icon"
         android:layout_width="@dimen/qs_tile_icon_size"
         android:layout_height="@dimen/qs_tile_icon_size"
-        android:layout_gravity="top|center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:scaleType="centerInside"
         />
     <TextView
@@ -33,7 +35,8 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center_horizontal"
-        android:gravity="top|center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         />
 </LinearLayout>
