--- a/packages/SystemUI/res/layout/quick_settings_tile_battery.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_battery.xml
@@ -17,8 +17,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="top"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
 
     <com.android.systemui.BatteryMeterView
@@ -28,7 +29,7 @@
         android:layout_width="22dp"
         android:layout_height="32dp"
         android:padding="3dp"
-        android:layout_gravity="top|center_horizontal"
+        android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:scaleType="centerInside"
         android:visibility="gone"
@@ -41,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="3dp"
-        android:layout_gravity="top|center_horizontal"
+        android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:scaleType="centerInside"
         android:visibility="gone"
@@ -52,7 +53,8 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center_horizontal"
-        android:gravity="top|center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal" />
 
 </LinearLayout>
