--- a/packages/SystemUI/res/layout/quick_settings_tile_dock_battery.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_dock_battery.xml
@@ -18,12 +18,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/dock_battery_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:paddingBottom="10dp"
         />
     <TextView
@@ -31,7 +33,8 @@
         android:id="@+id/dock_battery_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         />
 </LinearLayout>
