Sensor: Enable the motion accelerometer for screen orientation change
The screen orientation can be detected by the motion accelerometer
instead of generic accelerometer to save power.

Change-Id: Iaeb3e5958d2ef7cc33080d7091ed8a5462695c67
Signed-off-by: baked <travp624@gmail.com>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1452,4 +1452,7 @@
     <!-- The number of columns in the QuickSettings -->
     <integer name="config_quickSettingsColumns">3</integer>
 
+    <!-- bool value to for enabling motion accelerometer -->
+    <bool name="use_motion_accel">false</bool>
+
 </resources>
