--- a/packages/SystemUI/res/layout/msim_status_bar.xml
+++ b/packages/SystemUI/res/layout/msim_status_bar.xml
@@ -105,18 +105,22 @@
                 <!-- battery must be padded below to match assets -->
                 <com.android.systemui.BatteryMeterView
                     android:id="@+id/battery"
-                    android:layout_height="@dimen/status_bar_battery_height"
-                    android:layout_width="@dimen/status_bar_battery_width"
+                    android:layout_height="16dp"
+                    android:layout_width="10.5dp"
                     android:layout_marginBottom="@dimen/status_bar_battery_bottom_padding"
                     android:layout_marginStart="4dip"
+                    systemui:batteryView="statusbar"
                     />
-                <com.android.systemui.DockBatteryMeterView
-                    android:id="@+id/dock_battery"
-                    android:layout_height="@dimen/status_bar_battery_height"
-                    android:layout_width="@dimen/status_bar_battery_width"
-                    android:layout_marginBottom="@dimen/status_bar_battery_bottom_padding"
+                <com.android.systemui.BatteryCircleMeterView
+                    android:id="@+id/circle_battery"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
                     android:layout_marginStart="4dip"
-                    android:visibility="gone"
+                    android:layout_marginBottom="@dimen/status_bar_battery_bottom_padding"
+                    android:textAppearance="@style/TextAppearance.StatusBar.Battery"
+                    android:singleLine="true"
+                    android:gravity="bottom"
+                    systemui:batteryView="statusbar"
                     />
             </LinearLayout>
 
@@ -130,6 +134,24 @@
                 android:gravity="center_vertical|start"
                 />
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/center_clock_layout"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <com.android.systemui.statusbar.policy.ClockCenter
+            android:textAppearance="@style/TextAppearance.StatusBar.Clock"
+            android:gravity="center"
+            android:id="@+id/center_clock"
+            android:paddingLeft="6.0dip"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:singleLine="true" />
     </LinearLayout>
 
     <LinearLayout android:id="@+id/ticker"
